--- a/style_small.css
+++ b/style_small.css
@@ -15,7 +15,7 @@ header{
     width: 100%;
     border-bottom: 2px solid white;
     display: grid;
-    grid-template-columns: 4fr 1fr 1fr 1fr;
+    grid-template-columns: 1.5fr 1fr 1fr 1fr;
     align-items: center;
     position: fixed;
     background-color: black;
@@ -97,27 +97,29 @@ a:hover{
 
 #img{
     background-image: url("./images/image.jpg");
-    background-position: 20% 35%;
+    background-position: 23% 40%;
     background-size: 120vh;
-    margin-top: 80px;
+    margin-top: 40px;
     margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;
+    grid-row: 1/3;
+    grid-template-columns: 1/1;
+    width: 90%;
     height: 400px;
     border: 2px solid white;
     border-radius: 5px;
-    //object-fit: cover;
+    object-fit: cover;
 }
 
 #about h2{
-    margin: 20px 80px 40px 80px;
+    margin: 20px 0px 40px 20px;
     font-size: 40px;
 }
 
 #about p{
     height: 100%;
-    margin: 0px 80px 80px 80px;
+    margin: 0px 20px 80px 20px;
     font-size: 20px;
 }
 
@@ -127,8 +129,7 @@ a:hover{
     padding: 40px 0px 80px 0px;
 }
 #projects h2{
-    margin-left: 80px;
-    margin-bottom: 50px;
+    margin: 80px 0px 40px 20px;
     font-size: 40px;
 }
 
@@ -158,11 +159,11 @@ a:hover{
 }
 
 #technologies div{
-    margin: 40px;
+    margin: 10px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
     flex-wrap: wrap;
 }
 
@@ -171,11 +172,11 @@ a:hover{
 }
 
 #technologies h2, #forms h2{
-    margin: 80px 80px 40px 80px;
+    margin: 80px 0px 40px 20px;
     font-size: 40px;}
 
 #technologies div img{
-    width: 140px;
+    width: 100px;
 }
 
 #forms{
@@ -189,7 +190,7 @@ a:hover{
 }
 
 #forms form{
-    width: 40%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     background-color: black;
@@ -198,12 +199,13 @@ a:hover{
 
 #forms form div{
     display: flex;
-    flex: 1 0 auto;
-    justify-content: space-around;
+    flex-direction: column;
+
+    justify-content: center;
 }
 
 #forms form div input{
-    width: 50%;
+    width: 90%;
 }
 
 input, textarea{
