--- a/style_large.css
+++ b/style_large.css
@@ -18,6 +18,7 @@ header{
     grid-template-columns: 4fr 1fr 1fr 1fr;
     align-items: center;
     position: fixed;
+    z-index: 999;
     background-color: black;
 }
 header p{
@@ -39,7 +40,7 @@ a{
     color: white;
 }
 
-a:hover{
+header a:hover{
     background-color: white;
     border-color: black;
     color: black;
@@ -76,7 +77,7 @@ a:hover{
   
 @keyframes blink-caret {
     from, to { border-color: transparent }
-    50% { border-color: orange; }
+    50% { border-color: white; }
 }
 
 
@@ -169,6 +170,10 @@ a:hover{
 
 #technologies div img{
     width: 140px;
+}
+
+#technologies div div a:hover{
+    transform: scale(1.2);
 }
 
 #forms{
