--- a/style_medium.css
+++ b/style_medium.css
@@ -18,6 +18,7 @@ header{
     grid-template-columns: 4fr 1fr 1fr 1fr;
     align-items: center;
     position: fixed;
+    z-index: 999;
     background-color: black;
 }
 header p{
@@ -46,7 +47,7 @@ a{
     color: white;
 }
 
-a:hover{
+header a:hover{
     background-color: white;
     border-color: black;
     color: black;
@@ -85,7 +86,7 @@ a:hover{
   
 @keyframes blink-caret {
     from, to { border-color: transparent }
-    50% { border-color: orange; }
+    50% { border-color: white; }
 }
 
 
@@ -107,7 +108,6 @@ a:hover{
     height: 400px;
     border: 2px solid white;
     border-radius: 5px;
-    //object-fit: cover;
 }
 
 #about h2{
@@ -174,8 +174,16 @@ a:hover{
     margin: 80px 80px 40px 80px;
     font-size: 40px;}
 
+#technologies div div{
+    transition: transform .2s;
+}
+
 #technologies div img{
     width: 140px;
+}
+
+#technologies div div a:hover{
+    transform: scale(1.2);
 }
 
 #forms{
