--- a/style_small.css
+++ b/style_small.css
@@ -18,6 +18,7 @@ header{
     grid-template-columns: 1.5fr 1fr 1fr 1fr;
     align-items: center;
     position: fixed;
+    z-index: 999;
     background-color: black;
 }
 header p{
@@ -46,7 +47,7 @@ a{
     color: white;
 }
 
-a:hover{
+header a:hover{
     background-color: white;
     border-color: black;
     color: black;
@@ -85,7 +86,7 @@ a:hover{
   
 @keyframes blink-caret {
     from, to { border-color: transparent }
-    50% { border-color: orange; }
+    50% { border-color: white; }
 }
 
 
@@ -177,6 +178,10 @@ a:hover{
 
 #technologies div img{
     width: 100px;
+}
+
+#technologies div div a:hover{
+    transform: scale(1.2);
 }
 
 #forms{
